[gd_scene load_steps=8 format=3 uid="uid://csgey8qxilf2d"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_hk03b"]
[ext_resource type="PackedScene" uid="uid://cvo1ytq8u3gde" path="res://levels/path_line/path_line.tscn" id="2_0rrd0"]
[ext_resource type="PackedScene" uid="uid://bq15cl8f0w6qp" path="res://mobs/mob.tscn" id="3_pebnd"]
[ext_resource type="PackedScene" uid="uid://c0awfffr5s53o" path="res://towers/tower.tscn" id="4_5xwnm"]
[ext_resource type="PackedScene" uid="uid://24xen2o2nqq3" path="res://levels/tower_plot/tower_plot.tscn" id="5_1iyt7"]

[sub_resource type="Curve2D" id="Curve2D_u0qta"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 240, 0, 0, 0, 0, 0, 240, 360, 0, 0, 720, 360, 240, 720)
}
point_count = 3

[sub_resource type="LabelSettings" id="LabelSettings_yd1kx"]
font_size = 30

[node name="Level" type="Node"]
script = ExtResource("1_hk03b")
mob_scene = ExtResource("3_pebnd")
tower_scene = ExtResource("4_5xwnm")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27463, 0.74703, 0.133393, 1)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_u0qta")

[node name="PathLine" parent="." node_paths=PackedStringArray("path") instance=ExtResource("2_0rrd0")]
width = 50.0
path = NodePath("../Path2D")

[node name="TowerPlot" parent="." instance=ExtResource("5_1iyt7")]
position = Vector2(312, 328)

[node name="MobTimer" type="Timer" parent="."]
one_shot = true

[node name="LifeTotal" type="Label" parent="."]
anchors_preset = -1
anchor_bottom = 0.011
offset_left = 32.0
offset_top = 16.0
offset_right = 72.0
offset_bottom = 31.08
label_settings = SubResource("LabelSettings_yd1kx")

[node name="StartButton" type="Button" parent="."]
offset_left = 336.0
offset_top = 664.0
offset_right = 442.0
offset_bottom = 703.0
theme_override_font_sizes/font_size = 20
text = "Start Level"

[connection signal="clicked" from="TowerPlot" to="." method="_on_tower_plot_clicked"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
